tiny white gap coming between image and div resolved

--- a/src/App.css
+++ b/src/App.css
@@ -16,9 +16,11 @@ p{
 }
 .meme-image{
     width: fit-content; 
+    line-height: 0%; 
 }
 .meme-image > p{
     position: absolute;
+    line-height: 1;
 }
 .meme-image > p:hover{
     border: 1px solid rgb(76, 0, 255);
